--- a/1.4/Source/VanillaAnimalsExpanded/VanillaAnimalsExpanded.csproj
+++ b/1.4/Source/VanillaAnimalsExpanded/VanillaAnimalsExpanded.csproj
@@ -36,6 +36,7 @@
   <ItemGroup>
     <Reference Include="0Harmony, Version=2.0.0.2, Culture=neutral, processorArchitecture=MSIL">
       <HintPath>packages\Lib.Harmony.2.0.0.2\lib\net472\0Harmony.dll</HintPath>
+      <Private>False</Private>
     </Reference>
     <Reference Include="Assembly-CSharp">
       <HintPath>..\..\..\..\..\RimWorldWin64_Data\Managed\Assembly-CSharp.dll</HintPath>
@@ -298,9 +299,8 @@
     </Reference>
   </ItemGroup>
   <ItemGroup>
-    <Compile Include="HarmonyPatches\Patch_WildAnimalSpawner.cs" />
-    <Compile Include="HarmonyPatches\HarmonyPatches.cs" />
-    <Compile Include="ThingDefExtension.cs" />
+    <Compile Include="Defs\RiverNeedingAnimalDef.cs" />
+    <Compile Include="HarmonyPatches\MapTemperature_SeasonAcceptableFor_Patch.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="HarmonyPatches\HarmonyInstance.cs" />
   </ItemGroup>
